trunk/Archive2/ff/14df764a92227a/output
main.cpp: In function 'int main()':
main.cpp:10:7: error: missing template arguments before '*' token
     A *a = new A;
       ^
main.cpp:10:8: error: 'a' was not declared in this scope
     A *a = new A;
        ^
main.cpp:10:16: error: invalid use of template-name 'A' without an argument list
     A *a = new A;
                ^
